fix the alignment of footer

--- a/style.css
+++ b/style.css
@@ -296,12 +296,14 @@ footer {
 }
 
 .footer-links {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: start;
-  grid-template-rows: auto;
+  display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 1.4rem;
-  padding: 2rem 0;
+  padding-block: 2rem;
+}
+
+.footer-links ul {
+  list-style: none;
 }
 
 .footer-links ul li {
